# mariusz

./: .gitignore  .pylintrc  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: pythonapp.yml
mariusz/: coronavirus.py  gnujdb.py  main.py  meetup.py  mumble.py  test_gnujdb.py  wiki.py
